--- a/app/assets/stylesheets/dashboard/account.scss
+++ b/app/assets/stylesheets/dashboard/account.scss
@@ -10,7 +10,7 @@
   box-shadow:         0px 0px 15px 0px rgba(186,186,186,0.50);
   .account {
     padding: 5px;
-    color: #6F6F79;
+    color: $content-color;
     font-size: 15pt;
     line-height: 18px;
     $width: 308px;
